--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,10 +1,9 @@
-.aboutCon {
-    background-color: #D11149;
-}
-
 .aboutRow {
-    padding: 20px 0 0 0;
-    height: 100%;
+    padding: 200px 0 0 0;
+    height: 90vh;
+    background-color: #1a8fe3;
+    align-items: start;
+    text-align: center;
 }
 
 .aboutCards {
@@ -19,9 +18,15 @@
 }
 
 .profile {
-    background-color: #1A8FE3;
+    background-color: #f17105!important;
+    padding-bottom: 20px;
+    padding-top: 20px;
 }
 
 h2 {
     padding: 20px 0 0 0;
+}
+
+.aboutText {
+    color: #e5e5e5;
 }
