--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,6 +1,7 @@
 .aboutRow {
     padding: 200px 0 0 0;
-    height: 90vh;
+    height: auto;
+    min-height: 100%;
     background-color: #1a8fe3;
     align-items: start;
     text-align: center;
@@ -11,8 +12,8 @@
 }
 
 .myPic {
-    width: 400px;
-    height: 400px;
+    width: 350px;
+    height: 350px;
     border: solid 5px black;
     margin: 20px 0 50px 0;
 }
@@ -31,5 +32,4 @@ h2 {
     color: #e5e5e5;
     font-size: 18px;
     font-weight: 400;
-    margin: 0 400px 0 400px;
 }
